--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
 		"strict": true,
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
-		"allowImportingTsExtensions": true,
+		"allowImportingTsExtensions": true
 	}
 }
