--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
-		"drizzle-orm": "^0.38.4"
+		"bcrypt": "^5.1.1",
+		"drizzle-orm": "^0.38.4",
+		"jsonwebtoken": "^9.0.2"
 	}
 }
