--- a/package.json
+++ b/package.json
@@ -81,8 +81,9 @@
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
-		"bcrypt": "^5.1.1",
+		"bcryptjs": "^3.0.2",
 		"drizzle-orm": "^0.38.4",
-		"jsonwebtoken": "^9.0.2"
+		"jsonwebtoken": "^9.0.2",
+		"pg": "^8.13.3"
 	}
 }
