fixing db connection and select/insert

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
 		"bcryptjs": "^3.0.2",
+		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
 		"jsonwebtoken": "^9.0.2",
 		"pg": "^8.13.3"
