--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           load: true
           secrets: |
             jwt=${{ secrets.JWT_SECRET }}
-            dburl=${{ secrets.NEON_DATABASE_URL }}
+            dburl=${{ secrets.DATABASE_URL }}
             rapidapi_key_2=${{ secrets.RAPIDAPI_KEY_2 }}
 
       - name: Run tests inside container
