--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,22 @@ jobs:
             rapidapi_key_2=${{ secrets.RAPIDAPI_KEY_2 }}
 
       - name: Run tests inside container
-        run: docker run --rm recipe-search:latest npm test
-
+        run: |
+          docker run --rm \
+            -e DATABASE_URL=${{ secrets.NEON_DATABASE_URL }} \
+            -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            -e RAPIDAPI_KEY_2=${{ secrets.RAPIDAPI_KEY_2 }} \
+            recipe-search:latest \
+            npm test
+            
       - name: Build assets inside container
-        run: docker run --rm recipe-search:latest npm run build
+        run: |
+          docker run --rm \
+            -e DATABASE_URL=${{ secrets.NEON_DATABASE_URL }} \
+            -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            -e RAPIDAPI_KEY_2=${{ secrets.RAPIDAPI_KEY_2 }} \
+            recipe-search:latest \
+            npm run build
 
       - name: Upload build output
         uses: actions/upload-artifact@v4
