--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,32 +48,16 @@ jobs:
             recipe-search:latest \
             npm run build
 
-      - name: Upload build output
-        uses: actions/upload-artifact@v4
-        with:
-          name: vercel-build
-          path: .vercel/output
-
   deploy:
-    name: Deploy to Vercel
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download build output
-        uses: actions/download-artifact@v4
-        with:
-          name: vercel-build
-          path: .vercel/output
-
-      - name: Deploy with Vercel CLI
+      - uses: actions/checkout@v4
+      - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id:  ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: .
-          prebuilt: true
           prod: ${{ github.ref == 'refs/heads/main' }}
