--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,10 @@
 name: CI/CD
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - '**'
+    branches: [ '**' ]
+  push:
+    branches: [ main ]
 
 jobs:
   build-and-test:
@@ -51,6 +49,7 @@ jobs:
   deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - name: Deploy to Vercel
