--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
             jwt=${{ secrets.JWT_SECRET }}
             dburl=${{ secrets.DATABASE_URL }}
             rapidapi_key_2=${{ secrets.RAPIDAPI_KEY_2 }}
+            mongodb_uri=${{ secrets.MONGODB_URI }}
+            mongodb_database=${{ secrets.MONGODB_DATABASE }}
+            mongodb_collection=${{ secrets.MONGODB_COLLECTION }}
+            mongodb_search_index=${{ secrets.MONGODB_SEARCH_INDEX }}
 
       - name: Run tests inside container
         run: |
@@ -34,6 +38,10 @@ jobs:
             -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
             -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
             -e RAPIDAPI_KEY_2=${{ secrets.RAPIDAPI_KEY_2 }} \
+            -e MONGODB_URI=${{ secrets.MONGODB_URI }} \
+            -e MONGODB_DATABASE=${{ secrets.MONGODB_DATABASE }} \
+            -e MONGODB_COLLECTION=${{ secrets.MONGODB_COLLECTION }} \
+            -e MONGODB_SEARCH_INDEX=${{ secrets.MONGODB_SEARCH_INDEX }} \
             recipe-search:latest \
             npm test
 
@@ -43,6 +51,10 @@ jobs:
             -e DATABASE_URL=${{ secrets.DATABASE_URL }} \
             -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
             -e RAPIDAPI_KEY_2=${{ secrets.RAPIDAPI_KEY_2 }} \
+            -e MONGODB_URI=${{ secrets.MONGODB_URI }} \
+            -e MONGODB_DATABASE=${{ secrets.MONGODB_DATABASE }} \
+            -e MONGODB_COLLECTION=${{ secrets.MONGODB_COLLECTION }} \
+            -e MONGODB_SEARCH_INDEX=${{ secrets.MONGODB_SEARCH_INDEX }} \
             recipe-search:latest \
             npm run build
 
