--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && npm run prepack",
+		"start": "node build/index.js",
+		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
-		"prepack": "svelte-kit sync && svelte-package && publint",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
@@ -52,8 +52,7 @@
 		"@storybook/svelte": "^8.5.8",
 		"@storybook/sveltekit": "^8.5.8",
 		"@storybook/test": "^8.5.8",
-		"@sveltejs/adapter-node": "^5.2.11",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
@@ -83,6 +82,7 @@
 	"dependencies": {
 		"@neondatabase/serverless": "^0.10.4",
 		"@sveltejs/adapter-vercel": "^5.7.2",
+		"@sveltejs/kit": "^2.16.0",
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
