--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,17 +50,18 @@ jobs:
           rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Test & Build inside container
-        run: >
-          docker run --rm
-          -e DATABASE_URL=${{ secrets.DATABASE_URL }}
-          -e JWT_SECRET=${{ secrets.JWT_SECRET }}
-          -e RAPIDAPI_KEY_2=${{ secrets.RAPIDAPI_KEY_2 }}
-          -e MONGODB_URI=${{ secrets.MONGODB_URI }}
-          -e MONGODB_DATABASE=${{ secrets.MONGODB_DATABASE }}
-          -e MONGODB_COLLECTION=${{ secrets.MONGODB_COLLECTION }}
-          -e MONGODB_SEARCH_INDEX=${{ secrets.MONGODB_SEARCH_INDEX }}
-          recipe-search:latest
-          sh -c "npm test && npm run build"
+        run: |
+          docker run --rm \
+            -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
+            -e RAPIDAPI_KEY_2="${{ secrets.RAPIDAPI_KEY_2 }}" \
+            -e MONGODB_URI="${{ secrets.MONGODB_URI }}" \
+            -e MONGODB_DATABASE="${{ secrets.MONGODB_DATABASE }}" \
+            -e MONGODB_COLLECTION="${{ secrets.MONGODB_COLLECTION }}" \
+            -e MONGODB_SEARCH_INDEX="${{ secrets.MONGODB_SEARCH_INDEX }}" \
+            recipe-search:latest \
+            sh -c "npm test && npm run build"
+
 
   deploy:
     needs: build-and-test
