--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build image with layer cache
+      - name: Build & Test Builder Stage
         uses: docker/build-push-action@v4
         with:
           context: .
+          target: builder
           load: true
-          tags: recipe-search:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to:   type=local,dest=/tmp/.buildx-cache-new,mode=max
           secrets: |
             jwt=${{ secrets.JWT_SECRET }}
             dburl=${{ secrets.DATABASE_URL }}
@@ -45,22 +43,34 @@ jobs:
             mongodb_database=${{ secrets.MONGODB_DATABASE }}
             mongodb_collection=${{ secrets.MONGODB_COLLECTION }}
             mongodb_search_index=${{ secrets.MONGODB_SEARCH_INDEX }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to:   type=local,dest=/tmp/.buildx-cache-new,mode=max
+
+      - name: Verify builder succeeded
+        run: docker run --rm recipe-search:builder echo "✅ builder OK"
+
+      - name: Save new Docker cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
+      - name: Build & Tag Runtime Stage
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          target: runtime
+          load: true
+          tags: recipe-search:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+
       - name: Save new Docker cache
         run: |
           rm -rf /tmp/.buildx-cache && mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-      - name: Test & Build inside container
+      - name: Smoke-test final image
         run: |
-          docker run --rm \
-            -e DATABASE_URL="${{ secrets.DATABASE_URL }}" \
-            -e JWT_SECRET="${{ secrets.JWT_SECRET }}" \
-            -e RAPIDAPI_KEY_2="${{ secrets.RAPIDAPI_KEY_2 }}" \
-            -e MONGODB_URI="${{ secrets.MONGODB_URI }}" \
-            -e MONGODB_DATABASE="${{ secrets.MONGODB_DATABASE }}" \
-            -e MONGODB_COLLECTION="${{ secrets.MONGODB_COLLECTION }}" \
-            -e MONGODB_SEARCH_INDEX="${{ secrets.MONGODB_SEARCH_INDEX }}" \
-            recipe-search:latest \
-            sh -c "npm test && npm run build"
+          docker run --rm recipe-search:latest node --version
 
 
   deploy:
