--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 *storybook.log
+
+services/svd-training/gcs-credentials.json
+services/svd-training/venv
