--- a/package.json
+++ b/package.json
@@ -1,43 +1,28 @@
 {
-	"name": "recipesearch",
+	"name": "recipesearch-monorepo",
 	"version": "0.0.1",
+	"private": true,
+	"workspaces": [
+		"services/*",
+		"packages/*"
+	],
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"dev": "npm run dev --workspace=services/web",
+		"build": "npm run build --workspaces",
+		"test": "npm run test --workspaces",
+		"lint": "npm run lint --workspaces",
 		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test",
-		"db:push": "drizzle-kit push",
-		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
-	},
-	"files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*"
-	],
-	"sideEffects": [
-		"**/*.css"
-	],
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		}
-	},
-	"peerDependencies": {
-		"svelte": "^5.0.0"
+		"db:push": "npm run db:push --workspace=services/web",
+		"db:migrate": "npm run db:migrate --workspace=services/web",
+		"db:studio": "npm run db:studio --workspace=services/web",
+		"storybook": "npm run storybook --workspace=services/web",
+		"build-storybook": "npm run build-storybook --workspace=services/web",
+		"docker:build": "docker-compose build",
+		"docker:up": "docker-compose up -d",
+		"docker:down": "docker-compose down",
+		"train:model": "npm run train --workspace=services/svd-training",
+		"extract:data": "npm run extract --workspace=services/svd-training",
+		"web:dev": "npm run dev --workspace=services/web"
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.4",
