--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"dev": "npm run dev --workspace=services/web",
 		"build": "npm run build --workspaces",
 		"test": "npm run test --workspaces",
+		"test:unit": "npm run test --workspace=services/web",
+		"test:e2e": "npm run test:e2e --workspace=services/web",
 		"lint": "npm run lint --workspaces",
 		"format": "prettier --write .",
 		"db:push": "npm run db:push --workspace=services/web",
