--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 	],
 	"scripts": {
 		"dev": "npm run dev --workspace=services/web",
-		"build": "npm run build --workspaces",
+		"build": "npm run build --workspace=services/web",
 		"test": "npm run test --workspaces",
 		"test:unit": "npm run test --workspace=services/web",
 		"test:e2e": "npm run test:e2e --workspace=services/web",
-		"lint": "npm run lint --workspaces",
+		"lint": "npm run lint --workspace=services/web",
 		"format": "prettier --write .",
 		"db:push": "npm run db:push --workspace=services/web",
 		"db:migrate": "npm run db:migrate --workspace=services/web",
