--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ playwright-report
 .netlify
 .wrangler
 .playwright-report
-/.svelte-kit
+services/web/.svelte-kit/
+.svelte-kit/
 /build
 /dist
 
@@ -27,3 +28,6 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
 *storybook.log
+
+services/svd-training/gcs-credentials.json
+services/svd-training/venv
