--- a/services/web/package.json
+++ b/services/web/package.json
@@ -1,30 +1,24 @@
 {
-	"name": "recipesearch-monorepo",
+	"name": "@recipesearch/web",
 	"version": "0.0.1",
 	"private": true,
-	"workspaces": [
-		"services/*",
-		"packages/*"
-	],
+	"type": "module",
 	"scripts": {
-		"dev": "npm run dev --workspace=services/web",
-		"build": "npm run build --workspace=services/web",
-		"test": "npm run test --workspace=services/web",
-		"test:unit": "npm run test --workspace=services/web",
-		"test:e2e": "npm run test:e2e --workspace=services/web",
-		"lint": "npm run lint --workspace=services/web",
-		"format": "prettier --write .",
-		"db:push": "npm run db:push --workspace=services/web",
-		"db:migrate": "npm run db:migrate --workspace=services/web",
-		"db:studio": "npm run db:studio --workspace=services/web",
-		"storybook": "npm run storybook --workspace=services/web",
-		"build-storybook": "npm run build-storybook --workspace=services/web",
-		"docker:build": "docker-compose build",
-		"docker:up": "docker-compose up -d",
-		"docker:down": "docker-compose down",
-		"train:model": "npm run train --workspace=services/svd-training",
-		"extract:data": "npm run extract --workspace=services/svd-training",
-		"web:dev": "npm run dev --workspace=services/web"
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "eslint .",
+		"test": "vitest",
+		"test:ui": "vitest --ui",
+		"test:run": "vitest run",
+		"test:e2e": "playwright test",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.4",
