--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -141,3 +141,4 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'
+          working-directory: ./services/web
