--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ concurrency:
 
 on:
   pull_request:
-    types: [labeled]
+    types: [labeled, unlabeled]
     branches: ['main']
   push:
     branches: [main]
@@ -18,7 +18,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    if: github.event.label.name == 'CI/CD' || github.event_name == 'push'
+    if: (github.event.action == 'labeled' && github.event.label.name == 'CI/CD') || (github.event.action == 'unlabeled' && github.event.label.name == 'CI/CD') || github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node.js
@@ -34,7 +34,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 8
-    if: github.event.label.name == 'CI/CD' || github.event_name == 'push'
+    if: (github.event.action == 'labeled' && github.event.label.name == 'CI/CD') || (github.event.action == 'unlabeled' && github.event.label.name == 'CI/CD') || github.event_name == 'push'
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
@@ -59,7 +59,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.event.label.name == 'CI/CD' || github.event_name == 'push'
+    if: (github.event.action == 'labeled' && github.event.label.name == 'CI/CD') || (github.event.action == 'unlabeled' && github.event.label.name == 'CI/CD') || github.event_name == 'push'
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
@@ -84,7 +84,7 @@ jobs:
   e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    if: github.event.label.name == 'CI/CD' || github.event_name == 'push'
+    if: (github.event.action == 'labeled' && github.event.label.name == 'CI/CD') || (github.event.action == 'unlabeled' && github.event.label.name == 'CI/CD') || github.event_name == 'push'
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
