--- a/services/svd-training/requirements.txt
+++ b/services/svd-training/requirements.txt
@@ -1,12 +1,9 @@
-annotated-types==0.7.0
-anyio==4.9.0
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.2
+dnspython==2.7.0
 dotenv==0.9.9
-exceptiongroup==1.3.0
 faiss-cpu==1.11.0.post1
-fastapi==0.116.1
 google-api-core==2.25.1
 google-auth==2.40.3
 google-cloud-core==2.4.3
@@ -15,19 +12,23 @@ google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 idna==3.10
-numpy==2.0.2
+joblib==1.5.1
+numpy==1.26.4
 packaging==25.0
+pandas==2.3.1
 proto-plus==1.26.1
 protobuf==6.31.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pydantic==2.11.7
-pydantic_core==2.33.2
+pymongo==4.13.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 requests==2.32.4
 rsa==4.9.1
-sniffio==1.3.1
-starlette==0.47.2
-typing-inspection==0.4.1
-typing_extensions==4.14.1
+scikit-surprise==1.1.4
+scipy==1.13.1
+six==1.17.0
+surprise==0.1
+tzdata==2025.2
 urllib3==2.5.0
