--- a/services/recommender/requirements.txt
+++ b/services/recommender/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.9.0
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.2
+click==8.1.8
 dotenv==0.9.9
 exceptiongroup==1.3.0
 faiss-cpu==1.11.0.post1
@@ -14,6 +15,7 @@ google-cloud-storage==3.2.0
 google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
+h11==0.16.0
 idna==3.10
 numpy==2.0.2
 packaging==25.0
@@ -31,3 +33,4 @@ starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
+uvicorn==0.35.0
