--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5173:5173"
+    environment:
+      - RECOMMEND_URL=http://recommender:8080
+    depends_on:
+      - recommender
 
   recommender:
     build:
