--- a/services/web/package.json
+++ b/services/web/package.json
@@ -59,6 +59,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@google-cloud/storage": "^7.16.0",
 		"@neondatabase/serverless": "^0.10.4",
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.16.0",
