--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,6 @@ vite.config.ts.timestamp-*
 
 services/svd-training/gcs-credentials.json
 services/recommender/gcs-credentials.json
+services/web/gcs-credentials.json
 services/svd-training/svd-training-venv
 services/recommender/recommender-venv
