--- a/services/web/package.json
+++ b/services/web/package.json
@@ -66,6 +66,7 @@
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
+		"google-auth-library": "^10.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.17.0",
 		"pg": "^8.13.3"
