--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,6 @@ vite.config.ts.timestamp-*
 services/svd-training/gcs-credentials.json
 services/recommender/gcs-credentials.json
 services/web/gcs-credentials.json
+services/web/web-recommender-caller-key.json
 services/svd-training/svd-training-venv
 services/recommender/recommender-venv
