--- a/services/web/package.json
+++ b/services/web/package.json
@@ -59,12 +59,14 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
+		"@google-cloud/storage": "^7.16.0",
 		"@neondatabase/serverless": "^0.10.4",
 		"@sveltejs/adapter-vercel": "^5.7.2",
 		"@sveltejs/kit": "^2.16.0",
 		"bcryptjs": "^3.0.2",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "^0.38.4",
+		"google-auth-library": "^10.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongodb": "^6.17.0",
 		"pg": "^8.13.3"
