--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,4 +149,4 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           vercel-args: '--prod'
-          working-directory: ./services/web
+          working-directory: services/web
