--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,15 @@ services:
       dockerfile: Dockerfile
     ports:
       - '8080:8080'
+
+  svd-training:
+    build:
+      context: ./services/svd-training
+      dockerfile: Dockerfile
+    environment:
+      - RELOAD_URL=http://recommender:8080
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/gcs-credentials.json
+    volumes:
+      - ./services/svd-training/gcs-credentials.json:/app/gcs-credentials.json:ro
+    depends_on:
+      - recommender
