--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,26 @@ services:
       dockerfile: Dockerfile
     ports:
       - '8080:8080'
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/gcs-credentials.json
+    volumes:
+      - ./services/recommender/gcs-credentials.json:/app/gcs-credentials.json:ro
+
+  svd-training:
+    build:
+      context: ./services/svd-training
+      dockerfile: Dockerfile
+    environment:
+      - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_REVIEWS_COLLECTION=${MONGODB_REVIEWS_COLLECTION}
+      - MONGODB_EXTERNAL_REVIEWS_COLLECTION=${MONGODB_EXTERNAL_REVIEWS_COLLECTION}
+      - GCS_BUCKET_NAME=${GCS_BUCKET_NAME}
+      - RELOAD_URL=${RELOAD_URL}
+      - GCR_ADMIN_API_KEY=${GCR_ADMIN_API_KEY}
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/gcs-credentials.json
+    env_file:
+      - .env
+    volumes:
+      - ./services/svd-training/gcs-credentials.json:/app/gcs-credentials.json:ro
+    depends_on:
+      - recommender
