--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "recipesearch-monorepo",
 	"version": "0.0.1",
 	"private": true,
+	"packageManager": "npm@10.8.2",
 	"workspaces": [
 		"services/*",
 		"packages/*"
